add_subdirectory(RequestReply)
add_subdirectory(PubSub)
add_subdirectory(Worker)
add_subdirectory(SocketPoller)
add_subdirectory(AsyncRequestReply)
add_subdirectory(MultiThreadedServer)
add_subdirectory(MultiThreadedRelay)
add_subdirectory(SyncPubSub)
add_subdirectory(Identity)
add_subdirectory(RouterRequest)
add_subdirectory(RouterDealer)
add_subdirectory(LoadBalancingBroker)
add_subdirectory(AsyncClientServer)